--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,6 @@
 .github/**
+udacity-memory-management-final-project.pptx-1.png
+udacity-memory-management-final-project.pptx-2.png
+.vscode
+build
+.DS_Store
